Changed data access method, MySql.Data.MySqlClient into NHibernate(ORM) and added sinhala names of each student

--- a/MySql_Crud/MySql_Crud.csproj
+++ b/MySql_Crud/MySql_Crud.csproj
@@ -9,7 +9,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Mappings\Student.hbm.xml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Mappings\Student.hbm.xml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="MySql.Data" Version="8.0.33" />
+    <PackageReference Include="NHibernate" Version="5.4.5" />
   </ItemGroup>
 
   <ItemGroup>
